# Mobilki

./: CMakeLists.txt  README.md  build.gradle  gradlew  settings.gradle
GradeProf/app/src/androidTest/java/example/gradeprof/: ExampleInstrumentedTest.kt
GradeProf/app/src/test/java/example/gradeprof/: ExampleUnitTest.kt
GradeProf/gradle/wrapper/: gradle-wrapper.properties
_stuff/: UX.xd
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/example/gradeprof/: DataStatus.java  Edit.kt  Grade.java  GradeForm.kt  Login.kt  MainActivity.kt  MainScreen.kt  Manager.java  Opinions.kt  Professor.java  Profile.kt  RatingBarSvg.kt  UserName.kt  Utils.java
app/src/main/java/grdk/ratingbarsvg/: RatingBarSvg.kt
app/src/main/res/drawable/: alert.xml  button.xml  ic_1up.xml  ic_1up_grey.xml  ic_1up_red.xml  ic_book_filled.xml  ic_book_hollow.xml  input.xml  ratingbar_empty.xml  ratingbar_filled.xml
app/src/main/res/layout/: activity_edit.xml  activity_grade_form.xml  activity_main.xml  activity_main_screen.xml  activity_opinions.xml  activity_profile.xml  activity_user_name.xml  content_main.xml  u_sure_alert.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
source/: MainViewController.cpp
